[gd_scene load_steps=26 format=2]

[ext_resource path="res://art/temp/PauseWindow/quick_use_button.png" type="Texture" id=1]
[ext_resource path="res://art/temp/PauseWindow/close_button.png" type="Texture" id=2]
[ext_resource path="res://art/temp/PauseWindow/QuitGame.png" type="Texture" id=3]
[ext_resource path="res://art/temp/PauseWindow/background.png" type="Texture" id=4]
[ext_resource path="res://art/temp/PauseWindow/ItemDetail_background.png" type="Texture" id=5]
[ext_resource path="res://global/PauseWindow/PauseWindow.gd" type="Script" id=6]
[ext_resource path="res://global/PauseWindow/BackPack/Backpack.gd" type="Script" id=7]
[ext_resource path="res://art/temp/PauseWindow/NothingNow.png" type="Texture" id=8]
[ext_resource path="res://art/temp/PauseWindow/item_touched.png" type="Texture" id=9]
[ext_resource path="res://global/PauseWindow/BackPack/Inventory.tscn" type="PackedScene" id=10]
[ext_resource path="res://art/temp/PauseWindow/use_button.png" type="Texture" id=11]
[ext_resource path="res://art/temp/PauseWindow/BackpackButton.png" type="Texture" id=12]
[ext_resource path="res://art/temp/PauseWindow/Home.png" type="Texture" id=13]
[ext_resource path="res://art/temp/PauseWindow/TeamButton.png" type="Texture" id=14]
[ext_resource path="res://art/temp/PauseWindow/item_selected.png" type="Texture" id=15]
[ext_resource path="res://art/temp/PauseWindow/scroll_bg.png" type="Texture" id=16]
[ext_resource path="res://art/temp/PauseWindow/scroll_bar.png" type="Texture" id=17]
[ext_resource path="res://art/temp/PauseWindow/drop_button.png" type="Texture" id=18]
[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=19]
[ext_resource path="res://art/temp/PauseWindow/TechnologyTree.png" type="Texture" id=20]
[ext_resource path="res://art/temp/PauseWindow/Map.png" type="Texture" id=21]
[ext_resource path="res://art/temp/PauseWindow/Dialog.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 19 )

[node name="PauseWindow" type="Node2D"]
position = Vector2( 640, 360 )
z_index = 900
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, 38 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 4 )

[node name="Backpack" type="Node2D" parent="."]
position = Vector2( 0, 40 )
script = ExtResource( 7 )

[node name="InventoryFocused" type="Sprite" parent="Backpack"]
position = Vector2( -80, -205 )
scale = Vector2( 1.1, 1.05 )
texture = ExtResource( 9 )

[node name="InventoryChosen" type="Sprite" parent="Backpack"]
position = Vector2( -180, -205 )
scale = Vector2( 1.1, 1.05 )
texture = ExtResource( 15 )

[node name="InventoryList" type="Node2D" parent="Backpack"]
position = Vector2( 0, 15 )

[node name="Inventory1" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -180, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory2" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -80, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory3" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 20, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory4" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 120, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory5" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 220, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory6" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 320, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory7" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 420, -220 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory8" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -180, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory9" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -80, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory10" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 20, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory11" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 120, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory12" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 220, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory13" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 320, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory14" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 420, -120 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory15" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -180, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory16" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( -80, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory17" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 20, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory18" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 120, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory19" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 220, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory20" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 320, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Inventory21" parent="Backpack/InventoryList" instance=ExtResource( 10 )]
position = Vector2( 420, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="ItemDetail" type="Node2D" parent="Backpack"]
position = Vector2( 0, 10 )

[node name="Background" type="Sprite" parent="Backpack/ItemDetail"]
position = Vector2( 120, 150 )
scale = Vector2( 1.9, 0.8 )
texture = ExtResource( 5 )

[node name="ItemName" type="Label" parent="Backpack/ItemDetail"]
margin_left = -200.0
margin_top = 50.0
margin_right = 5.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "物品名称"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemType" type="Label" parent="Backpack/ItemDetail"]
margin_top = 50.0
margin_right = 128.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.209961, 0, 1, 1 )
text = "物品种类"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="Backpack/ItemDetail"]
margin_left = -180.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "物品描述
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="Backpack/ItemDetail"]

[node name="Use" type="TextureButton" parent="Backpack/ItemDetail/Buttons"]
margin_left = 330.0
margin_top = 200.0
margin_right = 408.0
margin_bottom = 231.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drop" type="TextureButton" parent="Backpack/ItemDetail/Buttons"]
margin_left = 330.0
margin_top = 130.0
margin_right = 408.0
margin_bottom = 161.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickUse" type="TextureButton" parent="Backpack/ItemDetail/Buttons"]
margin_left = 330.0
margin_top = 60.0
margin_right = 408.0
margin_bottom = 91.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBar" type="Node2D" parent="Backpack"]
position = Vector2( 485, -105 )

[node name="Background" type="Sprite" parent="Backpack/ScrollBar"]
texture = ExtResource( 16 )

[node name="Bar" type="Sprite" parent="Backpack/ScrollBar"]
position = Vector2( -4.5, -122 )
texture = ExtResource( 17 )
centered = false

[node name="LoadValue" type="Label" parent="Backpack"]
margin_left = 270.0
margin_top = -275.0
margin_right = 437.0
margin_bottom = -249.0
custom_fonts/font = SubResource( 3 )
text = "负重值：10/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamInfo" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="TeamInfo"]
position = Vector2( 100, 70 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 8 )

[node name="Diary" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Diary"]
position = Vector2( 100, 70 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 8 )

[node name="Home" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Home"]
position = Vector2( 100, 70 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 8 )

[node name="Map" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Map"]
position = Vector2( 100, 70 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 8 )

[node name="TechnologyTree" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="TechnologyTree"]
position = Vector2( 100, 70 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 8 )

[node name="Buttons" type="Node2D" parent="."]

[node name="CloseButton" type="TextureButton" parent="Buttons"]
margin_left = 478.973
margin_top = -287.005
margin_right = 529.973
margin_bottom = -234.005
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackpackButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = -200.0
margin_right = -250.0
margin_bottom = -147.0
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = -130.0
margin_right = -250.0
margin_bottom = -77.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiaryButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = -60.0
margin_right = -250.0
margin_bottom = -10.0
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = 10.0
margin_right = -250.0
margin_bottom = 60.0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = 80.0
margin_right = -250.0
margin_bottom = 130.0
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TechnologyTreeButton" type="TextureButton" parent="Buttons"]
margin_left = -500.0
margin_top = 150.0
margin_right = -250.0
margin_bottom = 200.0
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameButton" type="TextureButton" parent="."]
margin_left = -510.0
margin_top = 280.0
margin_right = -54.0
margin_bottom = 402.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Backpack/ItemDetail/Buttons/Use" to="Backpack" method="_on_Use_pressed"]
[connection signal="pressed" from="Backpack/ItemDetail/Buttons/Drop" to="Backpack" method="_on_Drop_pressed"]
[connection signal="pressed" from="Backpack/ItemDetail/Buttons/QuickUse" to="Backpack" method="_on_QuickUse_pressed"]
[connection signal="pressed" from="Buttons/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Buttons/BackpackButton" to="." method="_on_BackpackButton_pressed"]
[connection signal="pressed" from="Buttons/TeamButton" to="." method="_on_TeamButton_pressed"]
[connection signal="pressed" from="Buttons/DiaryButton" to="." method="_on_DiaryButton_pressed"]
[connection signal="pressed" from="Buttons/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Buttons/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
